
Changelog
=========

1.0.14 (unreleased)
-------------------

- Adds the ability to remove a reservation without sending an email.

1.0.13
------

- Adds a new 'latest reservations' report, showing reservations done in the last
  30 days.

1.0.12
------

- Removing expired sessions no longer results in orphan reserved slots. Existing
  orphan reserved slots are removed by the upgrade step.

- Exceptions in the 'your-reservations' form are now handled correctly,
  resulting in properly displayed errors.

1.0.11
------

- The date and start-/end-time are now properly disabled on the form if they
  may not be edited.

- Fixes 'continue' button not working on group forms

- Fixes radio-buttons and check-boxes not showing up on group forms

- Fixes a minor style issue in the teamraum theme

1.0.10
------

- Fixes 'your-reservations' from bugging out if a date before 1900 is entered

1.0.9
-----

- Fixes being unable to confirm 'your-reservations' outside the resource.

1.0.8
-----

- Adds a new view for exports which initially offers the existing reservations
  export and a new 'compact' export.

- Adds created / modified columns to reservation exports.

- Having different resources with different formsets no longer leads to errors
  when trying to do multiple reservations.

- Increases the maximum allocation quota from 100 to 1000

- Fixes typo in English text.

- Improves German texts.

1.0.7
-----

- Removes potentially dangerous orphan removal from settings panel.

- All reservation records stored in Postgres belonging to a certain resource
  are now wiped if said resource is deleted.

  The exception is the removal of a plone site through the ZMI. Though it is
  possible to intercept that event it is not entirely save to discard all
  resources that are part of plone site being deleted. It is namely possible
  that those have the same uuid as another existing resource of another site.

  To clean these kind of data zombies it might be good to create a tool with