@@ -335,7 +335,7 @@ div.field.error {
     background-color: white;     
 }
 
-a.reservation-delete {
+a.reservation-action {
    float: right;
 }
 
