@@ -5,6 +5,8 @@ Changelog
 1.0.14 (unreleased)
 -------------------
 
+- Adds the ability to print single reservations.
+
 - Adds the ability to remove a reservation without sending an email.
 
 1.0.13
